# mobuild

./: .gitignore  Makefile  README.md  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
src/mobuild/: __init__.py  __main__.py
src/mobuild/static/cookiecutter/{{cookiecutter.project_name}}/: Makefile
tests/: test_basics.py
tests/proj1/: __init__.py
tests/proj2/: __init__.py
