[project]
name = "mobuild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "koaning", email = "vincentwarmerdam@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["typer", "marimo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
